--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <h1>OVERFLOW ZONE</h1>
         <p>เลือกผลงานไปเล่นกันเลยย:</p>
         <button class="button" onclick="window.location.href='Ohana Game.html'">เกมการ์ดโอฮาน่า</button>
+        <button class="button" onclick="window.location.href='yokigame.html'">เกมโยคี</button>
         <button class="button" onclick="window.location.href='KhumThongChume.html'">เกมคำต้องเชื่อม</button>
         <button class="button" onclick="window.location.href='Bodrongtod.html'">สุ่มบทลงโทษ</button>
         <button class="button" onclick="window.location.href='PueanTaeBook.html'">หนังสือเพื่อนแท้</button>
