--- a/uploadfile.html
+++ b/uploadfile.html
@@ -122,9 +122,9 @@
     </div>
 
     <script>
-        const token = "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";  // Replace with your token
+        const token = "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";  // Replace with your token
         const repoOwner = "flownorthz";
-        const repoName = "flownorthz";
+        const repoName = "Upload_File";
         const branch = "main";
         const apiUrl = `https://api.github.com/repos/${repoOwner}/${repoName}/contents/`;
 
