--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <h1>OVERFLOW ZONE</h1>
         <p>เลือกผลงานไปเล่นกันเลยย:</p>
         <button class="button" onclick="window.location.href='Ohana Game.html'">เกมการ์ดโอฮาน่า</button>
-        <button class="button" onclick="window.location.href='yokigame.html'">เกมโยคี</button>
         <button class="button" onclick="window.location.href='KhumThongChume.html'">เกมคำต้องเชื่อม</button>
         <button class="button" onclick="window.location.href='Bodrongtod.html'">สุ่มบทลงโทษ</button>
         <button class="button" onclick="window.location.href='PueanTaeBook.html'">หนังสือเพื่อนแท้</button>
         <button class="button" onclick="window.location.href='Crush.html'">มาเป็นหวานใจกันมั้ย?</button>
+        <button class="button" onclick="window.location.href='upload.html'">FileFlow UploadSpace</button>
         <button class="button" onclick="window.location.href='https://www.youtube.com/@OverflowRightNow'">▶️YouTube : Overflow Official</button>
         <button class="button" onclick="window.location.href='https://www.instagram.com/_pxnsrn_/'">📷𝐈𝐧𝐬𝐭𝐚𝐠𝐫𝐚𝐦 : _pxnsrn_</button>
     </div>
