--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             margin: 15px 0 30px;
             color: #dcdcdc;
         }
+        a {            
+            text-decoration: none; /* กำจัดเส้นขีดใต้ */
+        }
 
         .button {
             display: block;
@@ -73,9 +76,18 @@
         <button class="button" onclick="window.location.href='KhumThongChume.html'">เกมคำต้องเชื่อม</button>
         <button class="button" onclick="window.location.href='Bodrongtod.html'">สุ่มบทลงโทษ</button>
         <button class="button" onclick="window.location.href='PueanTaeBook.html'">หนังสือเพื่อนแท้</button>
+        <button class="button" onclick="window.location.href='findfreetime.html'">หาวันว่าง</button>
         <button class="button" onclick="window.location.href='Crush.html'">มาเป็นหวานใจกันมั้ย?</button>
-        <button class="button" onclick="window.location.href='https://www.youtube.com/@OverflowRightNow'">▶️YouTube : Overflow Official</button>
-        <button class="button" onclick="window.location.href='https://www.instagram.com/_pxnsrn_/'">📷𝐈𝐧𝐬𝐭𝐚𝐠𝐫𝐚𝐦 : _pxnsrn_</button>
+
+
+        <a href="https://www.youtube.com/@OverflowRightNow" target="_blank">
+            <button class="button">▶️YouTube : Overflow Official</button>
+        </a>
+
+        <a href="https://www.instagram.com/_pxnsrn_/" target="_blank">
+            <button class="button">📷𝐈𝐧𝐬𝐭𝐚𝐠𝐫𝐚𝐦 : _pxnsrn_</button>
+        </a>
+
     </div>
 </body>
 </html>
