--- a/findfreetime.html
+++ b/findfreetime.html
@@ -254,7 +254,8 @@
         </div>
     </div>
 
-    <script>const addProfileBtn = document.getElementById('addProfileBtn');
+    <script>
+        const addProfileBtn = document.getElementById('addProfileBtn');
         const modal = document.getElementById('modal');
         const closeModal = document.getElementById('closeModal');
         const saveProfile = document.getElementById('saveProfile');
@@ -328,7 +329,7 @@
             calendarGrid.innerHTML = '';
 
             // เพิ่มแถวชื่อวัน (Sunday, Monday, Tuesday, etc.)
-            const daysOfWeek = ['วันอาทิตย์', 'วันจันทร์', 'วันอังคาร', 'วันพุธ', 'วันพฤหัสบดี', 'วันศุกร์', 'วันเสาร์'];
+            const daysOfWeek = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
             daysOfWeek.forEach(day => {
                 const dayHeader = document.createElement('div');
                 dayHeader.classList.add('day');
