--- a/transkeyboard.html
+++ b/transkeyboard.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>แปลงข้อความลืมเปลี่ยนภาษา</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -72,6 +73,13 @@
       color: #333;
     }
 
+    .copy-icon {
+      cursor: pointer;
+      margin-left: 10px;
+      font-size: 1.3rem;
+      color: #ff3d77;
+    }
+
     @media (max-width: 600px) {
       .container {
         padding: 20px;
@@ -94,7 +102,10 @@
     </div>
 
     <label for="outputText">ผลลัพธ์ที่แปลงแล้ว:</label>
-    <textarea id="outputText" readonly placeholder="ผลลัพธ์จะปรากฏที่นี่..."></textarea>
+    <div style="display: flex; align-items: center;">
+      <textarea id="outputText" readonly placeholder="ผลลัพธ์จะปรากฏที่นี่..."></textarea>
+      <i class="fas fa-copy copy-icon" onclick="copyToClipboard()"></i>
+    </div>
   </div>
 
   <script>
@@ -140,6 +151,12 @@
       }
 
       document.getElementById("outputText").value = output;
+    }
+
+    function copyToClipboard() {
+      const outputText = document.getElementById("outputText");
+      outputText.select();
+      document.execCommand("copy");
     }
   </script>
 
