--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <button class="button" onclick="window.location.href='PueanTaeBook.html'">หนังสือเพื่อนแท้</button>
         <button class="button" onclick="window.location.href='transkeyboard.html'">แปลงข้อความลืมเปลี่ยนภาษา</button>
         <button class="button" onclick="window.location.href='transflow.html'">แปลงไฟล์</button>
+        <button class="button" onclick="window.location.href='Birthday.html'">ทายวันเกิด</button>
         <button class="button" onclick="window.location.href='uselesslever.html'">คันโยกโง่เง่า</button>
         <button class="button" onclick="window.location.href='findfreetime.html'">หาวันว่าง</button>
         <button class="button" onclick="window.location.href='Crush.html'">มาเป็นหวานใจกันมั้ย?</button>
