--- a/Birthday.html
+++ b/Birthday.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ตารางตัวเลขและปุ่มมี-ไม่มี</title>
+<title>ทายตัวเลข</title>
 <style>
   /* ฟอนต์สวย อ่านง่าย */
   @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap');
