--- a/Birthday.html
+++ b/Birthday.html
@@ -111,7 +111,7 @@
 </head>
 <body>
 <h1 id="title">ทายวันเกิด</h1>
-<p id="instruction">ให้ดูแต่ละตัวเลขในแต่ละตารางว่ามีเลขวันเกิดอยู่หรือไม่ ถ้ามีกด "มี" ไม่มีกดปุ่ม "ไม่มี"</p>
+<p id="instruction">ให้ดูตัวเลขในแต่ละตารางว่ามีเลขวันเกิดอยู่หรือไม่ ถ้ามีกด "มี" ไม่มีกดปุ่ม "ไม่มี"</p>
 <p id="instruction">Made By Overflow</p>
 <div id="table-container"></div>
 
