--- a/palmy_mail.html
+++ b/palmy_mail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>จดหมายถึงดอกไม้</title>
+    <title>Palmy Mail</title>
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet" />
     <style>
         * {
@@ -97,11 +97,12 @@
             padding: 15px;
             overflow-y: auto;
             color: #333;
-            font-size: 10px;
+            font-size: 12px;
             line-height: 1.6;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             transform-origin: top center;
             transform: translateY(0) scale(1);
+
         }
 
         /* เมื่อ hover */
@@ -111,19 +112,39 @@
         }
 
         .mail:hover .text {
-            transform: translateY(-300px) scale(2.2);
+            transform: translateY(-300px) scale(2.3);
             transition: all 1s 1s ease;
             z-index: 20;
+        }
+
+        .message {
+            text-align: center;
+            margin-bottom: 20px;
+            font-size: 20px;
+            color: #a33;
+            transform: rotate(-5deg);
+            /* เอียงซ้ายเล็กน้อย */
+            display: inline-block;
+            font-style: italic;
+        }
+
+        .credit {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 14px;
+            color: #666;
+
         }
     </style>
 </head>
 
 <body>
     <div class="mydiv">
+        <div class="message">"กดที่ซองจดหมาย"</div>
         <div class="mail">
             <div class="cover"></div>
             <div class="text">
-                ถึงปาล์มมี่...<br /><br />
+                🌺ถึงปาล์มมี่...<br /><br />
                 มีหนังสือเล่มนึง ชื่อว่าปาล์มมี่<br />
                 ในเล่มนั้นมีผู้หญิง น่ารัก เรียบง่าย คนหนึ่ง<br />
                 เธอรักธรรมชาติ ดอกไม้ และความสงบ<br />
@@ -135,15 +156,15 @@
                 วันนี้ เขาแค่อยากขอเป็นเพียง “คนลดน้ำ”<br />
                 ที่จะค่อยๆ ดูแล และเฝ้าชื่นชมดอกไม้นี้ในทุก ๆ วัน<br />
                 เป็นการขอเริ่ม "ต้น" ใหม่ กับบัวลดน้ำที่พร้อมใส่ใจ<br />
-                ดอกไม้ต้นนี้ ตลอดไป หากเธอยินดี...
+                ดอกไม้ต้นนี้ ตลอดไป หากเธอยินดี💕...
             </div>
         </div>
+        <div class="credit">สร้างโดย ปั้น</div>
     </div>
 
     <script>
 
     </script>
-
 </body>
 
 </html>
