--- a/palmy_mail.html
+++ b/palmy_mail.html
@@ -202,6 +202,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0T8KHFP5LT"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0T8KHFP5LT');
+</script>
 
 <body>
     <div class="mydiv">
