--- a/palmy_mail.html
+++ b/palmy_mail.html
@@ -227,7 +227,7 @@
                 มักได้เห็นเธอถ่ายรูปลงไอจีอยู่บ่อย ๆ <span class="tilt"> (มีต่อด้านล่าง)</span> <br><br>
                 ผู้ชายคนหนึ่ง เคยเห็นดอกไม้นี้มาก่อน<br />
                 แต่กลับเผลอทำให้มันหุบลงไปโดยไม่ตั้งใจ<br />
-                วันนี้ เขาแค่อยากขอเป็นเพียง “คนลดน้ำ”<br />
+                วันนี้ เขาแค่อยากขอเป็นเพียง “คนรดน้ำ”<br />
                 ที่จะค่อยๆ ดูแล และเฝ้าชื่นชมดอกไม้นี้ในทุก ๆ วัน<br />
                 เป็นการขอเริ่ม "ต้น" ใหม่ กับบัวลดน้ำที่พร้อมใส่ใจ<br />
                 ดอกไม้ต้นนี้ ตลอดไป หากเธอยินดี💕...
