--- a/palmy_mail.html
+++ b/palmy_mail.html
@@ -229,12 +229,14 @@
                 แต่กลับเผลอทำให้มันหุบลงไปโดยไม่ตั้งใจ<br />
                 วันนี้ เขาแค่อยากขอเป็นเพียง “คนรดน้ำ”<br />
                 ที่จะค่อยๆ ดูแล และเฝ้าชื่นชมดอกไม้นี้ในทุก ๆ วัน<br />
-                เป็นการขอเริ่ม "ต้น" ใหม่ กับบัวลดน้ำที่พร้อมใส่ใจ<br />
-                ดอกไม้ต้นนี้ ตลอดไป หากเธอยินดี💕...
+                เป็นการขอเริ่ม "ต้น" ใหม่ กับบัวรดน้ำที่พร้อมใส่ใจ<br />
+                ดอกไม้ต้นนี้ ตลอดไป หากเธอยินดี💕
 
                 <div class="music-bar"> <audio controls id="music-player">
                         <source src="palmy/song.mp3" type="audio/mpeg"> Your browser does not support the audio element.
                     </audio> </div>
+                <audio id="open-sound" src="palmy/paper.mp3" preload="auto"></audio>
+
 
                 <!-- ส่วน slider รูปภาพ -->
                 <div class="image-slider">
@@ -250,6 +252,8 @@
         <script>
             const mail = document.getElementById('mail');
             const musicPlayer = document.getElementById('music-player');
+            const openSound = document.getElementById('open-sound');
+
             musicPlayer.volume = 0.5;
 
             mail.addEventListener('click', () => {
@@ -257,7 +261,11 @@
                 musicPlayer.play().catch(e => {
                     console.log("Cannot autoplay until user interaction:", e);
                 });
+                // เล่นเสียงเปิดซองทันที ซ้อนกับเพลงหลัก
+                openSound.currentTime = 0;  // เล่นซ้ำได้ตั้งแต่ต้น
+                openSound.play();
             });
+
 
 
 
